# bookmark_knowledgebase_manager

./: .dockerignore  .gitignore  database.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt
