[project]
name = "bookmark-knowledge-mcp"
version = "0.1.0"
description = "MCP server for Bookmark & Knowledge Base Manager"
requires-python = ">=3.9"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
bookmark-mcp = "mcp_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
